// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Note component > renders with close button 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds-text-black ds-bg-success"
  role="alert"
>
  <div
    class="ds-mx-auto ds-flex ds-min-h-[42px] ds-items-center ds-px-5 ds-justify-start sm:ds-min-h-11 sm:ds-pl-7 sm:ds-pr-0 sm:ds-justify-center sm:ds-gap-x-[20%]"
  >
    <div
      class="ds-flex ds-flex-col ds-flex-wrap ds-items-start ds-py-4 sm:ds-flex-row sm:ds-items-center sm:ds-gap-x-5 sm:ds-gap-y-2 sm:ds-py-5"
    >
      <div
        class="ds-font-poppins ds-text-heading-4 sm:ds-text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds-mt-1 sm:ds-mt-0 ds-text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds-flex ds-items-center"
    >
      <button
        aria-label="Close"
        class="ds-ml-3 ds-mr-0 ds-flex sm:ds-mr-5 sm:ds-ml-5"
        type="button"
      >
        <span
          class="material-symbols-outlined size-32 ds-select-none"
        >
          cancel
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Note component > renders with default variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds-text-black ds-bg-success"
  role="alert"
>
  <div
    class="ds-mx-auto ds-flex ds-min-h-[42px] ds-items-center ds-px-5 ds-justify-start sm:ds-min-h-11 sm:ds-pl-7 sm:ds-pr-0 sm:ds-justify-center sm:ds-gap-x-[20%]"
  >
    <div
      class="ds-flex ds-flex-col ds-flex-wrap ds-items-start ds-py-4 sm:ds-flex-row sm:ds-items-center sm:ds-gap-x-5 sm:ds-gap-y-2 sm:ds-py-5"
    >
      <div
        class="ds-font-poppins ds-text-heading-4 sm:ds-text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds-mt-1 sm:ds-mt-0 ds-text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds-flex ds-items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with error variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds-text-black ds-bg-alert"
  role="alert"
>
  <div
    class="ds-mx-auto ds-flex ds-min-h-[42px] ds-items-center ds-px-5 ds-justify-start sm:ds-min-h-11 sm:ds-pl-7 sm:ds-pr-0 sm:ds-justify-center sm:ds-gap-x-[20%]"
  >
    <div
      class="ds-flex ds-flex-col ds-flex-wrap ds-items-start ds-py-4 sm:ds-flex-row sm:ds-items-center sm:ds-gap-x-5 sm:ds-gap-y-2 sm:ds-py-5"
    >
      <div
        class="ds-font-poppins ds-text-heading-4 sm:ds-text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds-mt-1 sm:ds-mt-0 ds-text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds-flex ds-items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with read more component 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds-text-black ds-bg-success"
  role="alert"
>
  <div
    class="ds-mx-auto ds-flex ds-min-h-[42px] ds-items-center ds-px-5 ds-justify-start sm:ds-min-h-11 sm:ds-pl-7 sm:ds-pr-0 sm:ds-justify-center sm:ds-gap-x-[20%]"
  >
    <div
      class="ds-flex ds-flex-col ds-flex-wrap ds-items-start ds-py-4 sm:ds-flex-row sm:ds-items-center sm:ds-gap-x-5 sm:ds-gap-y-2 sm:ds-py-5"
    >
      <div
        class="ds-font-poppins ds-text-heading-4 sm:ds-text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds-mt-1 sm:ds-mt-0 ds-text-body-sm"
      >
        Test Description
      </div>
      <span
        class="ds-font-poppins ds-mt-4 ds-text-nowrap ds-rounded-[30px] ds-bg-white ds-px-6 ds-py-[10px] ds-text-button-md hover:ds-underline focus-visible:ds-outline focus-visible:ds-outline-[3px] focus-visible:ds-outline-offset-[1.5px] focus-visible:ds-outline-white active:ds-bg-accent active:ds-text-white active:ds-no-underline"
      >
        Read more
      </span>
    </div>
    <div
      class="ds-flex ds-items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with success variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds-text-black ds-bg-success"
  role="alert"
>
  <div
    class="ds-mx-auto ds-flex ds-min-h-[42px] ds-items-center ds-px-5 ds-justify-start sm:ds-min-h-11 sm:ds-pl-7 sm:ds-pr-0 sm:ds-justify-center sm:ds-gap-x-[20%]"
  >
    <div
      class="ds-flex ds-flex-col ds-flex-wrap ds-items-start ds-py-4 sm:ds-flex-row sm:ds-items-center sm:ds-gap-x-5 sm:ds-gap-y-2 sm:ds-py-5"
    >
      <div
        class="ds-font-poppins ds-text-heading-4 sm:ds-text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds-mt-1 sm:ds-mt-0 ds-text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds-flex ds-items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with warning variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds-text-black ds-bg-warning"
  role="alert"
>
  <div
    class="ds-mx-auto ds-flex ds-min-h-[42px] ds-items-center ds-px-5 ds-justify-start sm:ds-min-h-11 sm:ds-pl-7 sm:ds-pr-0 sm:ds-justify-center sm:ds-gap-x-[20%]"
  >
    <div
      class="ds-flex ds-flex-col ds-flex-wrap ds-items-start ds-py-4 sm:ds-flex-row sm:ds-items-center sm:ds-gap-x-5 sm:ds-gap-y-2 sm:ds-py-5"
    >
      <div
        class="ds-font-poppins ds-text-heading-4 sm:ds-text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds-mt-1 sm:ds-mt-0 ds-text-body-sm"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds-flex ds-items-center"
    />
  </div>
</div>
`;
